--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        self.name = name\n",
+    "        self.weight = weight\n",
+    "        self.species = None\n",
+    "        self.size = None\n",
+    "        self.food_type = None\n",
+    "        self.nocturnal = False\n",
+    "        \n",
+    "    def sleep(self):\n",
+    "        if self.nocturnal:\n",
+    "            print(\"{} sleeps during the day!\".format(self.name))\n",
+    "        else:\n",
+    "            print(\"{} sleeps during the night!\".format(self.name))\n",
+    "            \n",
+    "    def eat(self, food):\n",
+    "        if self.food_type == 'omnivore':\n",
+    "            print(\"{} the {} thinks {} is Yummy!\".format(self.name, self.species, food))\n",
+    "        elif (food == 'meat' and self.food_type == \"carnivore\") or (food == 'plants' and self.food_type == 'herbivore'):\n",
+    "            print(\"{} the {} thinks {} is Yummy!\".format(self.name, self.species, food))\n",
+    "        else:\n",
+    "            print(\"I don't eat this!\")"
    ]
   },
   {
@@ -72,12 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.size = 'enormous'\n",
+    "        self.species = 'elephant'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -95,12 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.size = 'large'\n",
+    "        self.species = 'tiger'\n",
+    "        self.food_type = 'carnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -118,12 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.size = 'small'\n",
+    "        self.species = 'raccoon'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -141,12 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.size = 'large'\n",
+    "        self.species = 'gorilla'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -174,12 +219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    animal = None\n",
+    "    if animal_type == \"Gorilla\":\n",
+    "        animal = Gorilla(name, weight)\n",
+    "    elif animal_type == \"Raccoon\":\n",
+    "        animal = Raccoon(name, weight)\n",
+    "    elif animal_type == \"Tiger\":\n",
+    "        animal = Tiger(name, weight)\n",
+    "    else:\n",
+    "        animal = Elephant(name, weight)\n",
+    "    \n",
+    "    zoo.append(animal)\n",
+    "    \n",
+    "    return zoo"
    ]
   },
   {
@@ -198,11 +255,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create your animals and add them to the 'zoo' in this cell!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Elephant at 0x2075be3d3c8>,\n",
+       " <__main__.Elephant at 0x2075be3d278>,\n",
+       " <__main__.Raccoon at 0x2075be3d2b0>,\n",
+       " <__main__.Raccoon at 0x2075be3d198>,\n",
+       " <__main__.Gorilla at 0x2075be3d0b8>,\n",
+       " <__main__.Tiger at 0x2075be3d128>,\n",
+       " <__main__.Tiger at 0x2075be3d048>,\n",
+       " <__main__.Tiger at 0x2075be3d0f0>]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', 'Tiger', 'Tiger']\n",
+    "\n",
+    "zoo = []\n",
+    "\n",
+    "for i in to_create:\n",
+    "    zoo = add_animal_to_zoo(zoo, i, \"name\", 100)\n",
+    "    \n",
+    "zoo"
    ]
   },
   {
@@ -224,12 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    for animal in zoo:\n",
+    "        if time == 'Day':\n",
+    "            # CASE: Daytime feeding--Only feed the animals that aren't nocturnal\n",
+    "            if animal.nocturnal == False:\n",
+    "                # If the animal is a carnivore, feed it \"meat\".  Otherwise, feed it \"plants\"\n",
+    "                if animal.food_type == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')\n",
+    "        else:\n",
+    "            # CASE: Night-time feeding--feed only the nocturnal animals! \n",
+    "            if animal.nocturnal == True:\n",
+    "                if animal.food_type == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')"
    ]
   },
   {
@@ -241,10 +347,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name the elephant thinks plants is Yummy!\n",
+      "name the elephant thinks plants is Yummy!\n",
+      "name the gorilla thinks plants is Yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,10 +375,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name the raccoon thinks plants is Yummy!\n",
+      "name the raccoon thinks plants is Yummy!\n",
+      "name the tiger thinks meat is Yummy!\n",
+      "name the tiger thinks meat is Yummy!\n",
+      "name the tiger thinks meat is Yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, 'Night')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
